--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "characters"
   ],
   "devDependencies": {
-    "expect.js": "^0.3.1",
-    "mocha": "^2.0.1"
+    "expect.js": "*",
+    "mocha": "*"
   }
 }
