--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "email": "sindresorhus@gmail.com",
     "url": "http://sindresorhus.com"
   },
+  "maintainers": [
+    "Sindre Sorhus <sindresorhus@gmail.com> (http://sindresorhus.com)",
+    "Joshua Appelman <jappelman@xebia.com> (http://jbnicolai.com)"
+  ],
   "engines": {
     "node": ">=0.8.0"
   },
